<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="330dp"
    android:layout_height="685dp">

    <View
        android:id="@+id/separator_1"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/separator_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/separator_2"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/separator_1" />

    <ImageView
        android:id="@+id/general_icon_popup"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/einar"
        style="@style/PopupGeneralLogo"
        app:layout_constraintBottom_toTopOf="@+id/card_name_popup"
        app:layout_constraintEnd_toEndOf="@+id/card_name_popup"
        app:layout_constraintStart_toStartOf="@+id/card_name_popup"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/card_name_popup"
        style="@style/TitleStyle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="65dp"
        android:text="@string/card_name_popup"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/card_general_cat_popup"
        style="@style/DefaultStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/general_category_popup"
        app:layout_constraintEnd_toEndOf="@+id/card_name_popup"
        app:layout_constraintStart_toStartOf="@+id/card_name_popup"
        app:layout_constraintTop_toBottomOf="@+id/card_name_popup" />

    <ImageView
        android:id="@+id/close_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:src="@drawable/ic_close"
        app:layout_constraintBottom_toTopOf="@+id/card_name_popup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/general_icon_popup" />

    <ImageButton
        android:id="@+id/book_button_popup"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginRight="32dp"
        android:src="@drawable/ic_book"
        app:layout_constraintBottom_toBottomOf="@+id/general_icon_popup"
        app:layout_constraintEnd_toStartOf="@+id/close_button"
        app:layout_constraintTop_toTopOf="@+id/general_icon_popup" />

    <TextView
        android:id="@+id/species_popup"
        style="@style/SideInfosStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="30dp"
        android:text="@string/species_popup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_general_cat_popup" />

    <TextView
        android:id="@+id/rarity_number_popup"
        style="@style/SideInfosStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rarity_number_popup"
        app:layout_constraintStart_toStartOf="@+id/species_popup"
        app:layout_constraintTop_toBottomOf="@+id/species_popup" />

    <TextView
        android:id="@+id/class_popup"
        style="@style/SideInfosStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/class_popup"
        app:layout_constraintStart_toStartOf="@+id/species_popup"
        app:layout_constraintTop_toBottomOf="@+id/rarity_number_popup" />

    <TextView
        android:id="@+id/personality_popup"
        style="@style/SideInfosStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personality_popup"
        app:layout_constraintStart_toStartOf="@+id/species_popup"
        app:layout_constraintTop_toBottomOf="@+id/class_popup" />

    <TextView
        android:id="@+id/size_popup"
        style="@style/SideInfosStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/size_popup"
        app:layout_constraintStart_toStartOf="@+id/species_popup"
        app:layout_constraintTop_toBottomOf="@+id/personality_popup" />

    <TextView
        android:id="@+id/figures_popup"
        style="@style/SideInfosStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/figures_popup"
        app:layout_constraintStart_toStartOf="@+id/species_popup"
        app:layout_constraintTop_toBottomOf="@+id/size_popup" />

    <TextView
        android:id="@+id/spaces_popup"
        style="@style/SideInfosStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spaces_popup"
        app:layout_constraintStart_toStartOf="@+id/species_popup"
        app:layout_constraintTop_toBottomOf="@+id/figures_popup" />

    <TextView
        android:id="@+id/total_spaces_popup"
        style="@style/SideInfosStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_spaces_popup"
        app:layout_constraintStart_toStartOf="@+id/species_popup"
        app:layout_constraintTop_toBottomOf="@+id/spaces_popup" />

    <TextView
        android:id="@+id/lives_popup"
        style="@style/StatStyle"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/lives_color"
        android:text="@string/lives_popup"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@+id/species_popup"
        app:layout_constraintTop_toBottomOf="@+id/total_spaces_popup" />

    <TextView
        android:id="@+id/move_popup"
        style="@style/StatStyle"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/move_color"
        android:text="@string/move_popup"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@+id/species_popup"
        app:layout_constraintTop_toBottomOf="@+id/lives_popup" />

    <TextView
        android:id="@+id/range_popup"
        style="@style/StatStyle"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/range_color"
        android:text="@string/range_popup"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@+id/species_popup"
        app:layout_constraintTop_toBottomOf="@+id/move_popup" />

    <TextView
        android:id="@+id/attack_popup"
        style="@style/StatStyle"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/attack_color"
        android:text="@string/attack_popup"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@+id/species_popup"
        app:layout_constraintTop_toBottomOf="@+id/range_popup" />

    <TextView
        android:id="@+id/defense_popup"
        style="@style/StatStyle"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/defense_color"
        android:text="@string/defense_popup"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@+id/species_popup"
        app:layout_constraintTop_toBottomOf="@+id/attack_popup" />

    <TextView
        android:id="@+id/points_popup"
        style="@style/PointsStyle"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/points_popup"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@+id/species_popup"
        app:layout_constraintTop_toBottomOf="@+id/defense_popup" />

    <ScrollView
        android:layout_width="180dp"
        android:layout_height="420dp"
        android:background="@drawable/border_powers"
        android:padding="5dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <TextView
            android:id="@+id/powers_popup"
            style="@style/DefaultStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/powers_popup" />

    </ScrollView>

    <ImageView
        android:id="@+id/minus_button_popup"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_minus"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/separator_1"
        app:layout_constraintStart_toStartOf="@+id/separator_1" />

    <ImageView
        android:id="@+id/plus_button_popup"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_plus"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/separator_2"
        app:layout_constraintStart_toStartOf="@+id/separator_2" />

    <TextView
        android:id="@+id/army_count_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_integer"
        style="@style/TitleStyle"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/plus_button_popup"
        app:layout_constraintEnd_toStartOf="@+id/separator_2"
        app:layout_constraintStart_toEndOf="@+id/separator_1"
        app:layout_constraintTop_toTopOf="@+id/plus_button_popup" />

</androidx.constraintlayout.widget.ConstraintLayout>