<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="80dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/general_icon_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ullar" />

    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/view_separation"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_item"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/item_card_name"
        app:layout_constraintBottom_toTopOf="@+id/view_separation"
        app:layout_constraintStart_toEndOf="@+id/cardView" />

    <TextView
        android:id="@+id/general_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/item_card_general"
        app:layout_constraintStart_toStartOf="@+id/name_item"
        app:layout_constraintTop_toBottomOf="@+id/view_separation" />

    <ImageView
        android:id="@+id/plus_button_item"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:src="@drawable/ic_plus"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="@+id/view_separation"
        app:layout_constraintTop_toTopOf="@+id/cardView" />

    <TextView
        android:id="@+id/army_count_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_integer"
        android:textSize="20sp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintEnd_toStartOf="@+id/plus_button_item"
        app:layout_constraintTop_toTopOf="@+id/cardView" />

    <ImageView
        android:id="@+id/minus_button_item"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginRight="8dp"
        android:src="@drawable/ic_minus"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintEnd_toStartOf="@+id/army_count_item"
        app:layout_constraintTop_toTopOf="@+id/cardView" />

    <TextView
        android:id="@+id/points_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_integer"
        android:layout_marginRight="2dp"
        app:layout_constraintTop_toBottomOf="@+id/view_separation"
        app:layout_constraintEnd_toStartOf="@+id/points_title" />

    <TextView
        android:id="@+id/points_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/points_title"
        android:layout_marginLeft="90dp"
        app:layout_constraintEnd_toStartOf="@+id/minus_button_item"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/view_separation" />

</androidx.constraintlayout.widget.ConstraintLayout>